--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>7.9.0</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -32,13 +33,15 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.6.1</version>
+            <version>6.14.3</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
             <version>7.9.0</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
